# Talia

./: Cargo.toml  LICENSE  README  README.md
src/: board.rs  board_builder.rs  bot.rs  errors.rs  evaluate.rs  game_manager.rs  main.rs  move_generation.rs  piece.rs  piece_square_table.rs  search.rs  square.rs
